// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonWithImage: Рендерится без ошибок 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <StyledThemeProvider>
    <ButtonWithImage
      size="large"
      variant="large"
    >
      Button
    </ButtonWithImage>
  </StyledThemeProvider>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <ButtonWithImage
        size="large"
        variant="large"
      >
        Button
      </ButtonWithImage>,
      "theme": Object {
        "borderColor": Object {
          "color0": "#FFFFFF",
          "color1": "#E5E5E5",
          "color10": "#AEAEAE",
          "color11": "#333333",
          "color12": "#DF4624",
          "color13": "#f2f2f2",
          "color2": "#DEDEDE",
          "color3": "#4F4F4F",
          "color4": "#848484",
          "color5": "#007FAF",
          "color6": "#006699",
          "color7": "#00649C",
          "color8": "#007CC4",
          "color9": "#F97E63",
        },
        "borderRadius": Array [
          0,
          2,
          4,
          8,
          12,
          16,
          18,
          20,
          24,
          28,
          32,
          36,
          40,
          44,
          48,
          52,
          56,
          60,
          64,
          68,
          72,
          76,
          80,
        ],
        "boxShadow": Array [
          "2px 4px 8px 0px rgba(138,138,138,0.5)",
          "2px 4px 8px 0px rgba(138,138,138,0.5)",
          "2px 2px 4px 0px rgba(0,127,175,1)",
        ],
        "breakpoints": Array [
          "1024px",
          "1200px",
          "1440px",
        ],
        "colors": Object {
          "color0": "#FFFFFF",
          "color1": "#E5E5E5",
          "color10": "#AEAEAE",
          "color11": "#333333",
          "color12": "#DF4624",
          "color13": "#f2f2f2",
          "color2": "#DEDEDE",
          "color3": "#4F4F4F",
          "color4": "#848484",
          "color5": "#007FAF",
          "color6": "#006699",
          "color7": "#00649C",
          "color8": "#007CC4",
          "color9": "#F97E63",
        },
        "fontFamily": Object {
          "primary300": "Museo Sans 300",
          "primary500": "Museo Sans 500",
          "primary700": "Museo Sans 700",
          "secondary": "Circe Regular",
          "secondaryBold": "Circe Bold",
        },
        "fontSizes": Array [
          0,
          2,
          4,
          8,
          12,
          16,
          18,
          20,
          24,
          28,
          32,
          36,
          40,
          44,
          48,
          52,
          56,
          60,
          64,
          68,
          72,
          76,
          80,
        ],
        "fontWeight": Array [
          300,
          500,
          700,
        ],
        "lineHeight": Array [
          0,
          2,
          4,
          8,
          12,
          16,
          18,
          20,
          24,
          28,
          32,
          36,
          40,
          44,
          48,
          52,
          56,
          60,
          64,
          68,
          72,
          76,
          80,
        ],
        "space": Array [
          0,
          2,
          4,
          8,
          12,
          16,
          18,
          20,
          24,
          28,
          32,
          36,
          40,
          44,
          48,
          52,
          56,
          60,
          64,
          68,
          72,
          76,
          80,
        ],
        "textAlign": Array [
          "left",
          "center",
          "right",
        ],
        "variant": Object {
          "buttonComment": Object {
            "comment": Object {
              "backgroundColor": "#006699",
              "border": 0,
              "minWidth": "20px",
            },
            "emptyComment": Object {
              "backgroundColor": "#848484",
              "border": 0,
              "minWidth": "20px",
            },
            "newComment": Object {
              "backgroundColor": "#df4624",
              "border": 0,
              "minWidth": "20px",
            },
          },
          "buttonSize": Object {
            "large": Object {
              "fontFamily": "Circe Bold",
              "fontSize": " 32px",
              "lineHeight": "40px",
              "minWidth": "500px",
              "padding": "8px 60px",
            },
            "medium": Object {
              "fontFamily": "Circe Bold",
              "fontSize": "18px",
              "lineHeight": "24px",
              "minWidth": "250px",
              "padding": "8px 0",
            },
            "small": Object {
              "fontFamily": "Circe Regular",
              "fontSize": " 16px",
              "lineHeight": "16px",
              "padding": "2px 0",
            },
            "xsmall": Object {
              "fontSize": " 14px",
              "fontWeight": 700,
              "lineHeight": "16px",
              "minWidth": "70px",
              "padding": "2px 0",
            },
          },
          "buttons": Object {
            "empty": Object {
              "backgroundColor": "#ffffff",
              "border": 0,
            },
            "large": Object {
              "&:hover": Object {
                "backgroundColor": "#00649C",
                "color": "#ffffff",
                "fill": "#ffffff",
              },
              "backgroundColor": "transparent",
              "border": "2px solid",
              "color": "#00649C",
              "fill": "#00649C",
            },
            "small": Object {
              "&:hover": Object {
                "backgroundColor": "#848484",
                "color": "#ffffff",
                "fill": "#ffffff",
              },
              "backgroundColor": "#fff",
              "border": "1px solid",
              "color": "#848484",
              "fill": "#848484",
            },
            "xsmall": Object {
              "&:hover": Object {
                "backgroundColor": "#fff",
                "color": "#00649C",
                "fill": "#00649C",
              },
              "backgroundColor": "#00649C",
              "border": "1px solid #00649C",
              "color": "#fff",
              "fill": "#fff",
            },
          },
          "inputSize": Object {
            "lg": Object {
              "fontSize": "28px",
              "lineHeight": "36px",
              "padding": "10px 10px",
            },
            "md": Object {
              "fontSize": "16px",
              "lineHeight": "20px",
              "padding": "10px 10px",
            },
            "sm": Object {
              "fontSize": "16px",
              "lineHeight": "20px",
              "padding": "4px 10px",
            },
            "xs": Object {
              "fontSize": "16px",
              "lineHeight": "18px",
              "padding": "0 10px",
            },
          },
          "text": Object {
            "document": Object {
              "color": "#4F4F4F",
              "fontFamily": "'Museo Sans 300'",
              "fontSize": "14px",
              "lineHeight": "20px",
              "marginBottom": "10px",
              "marginTop": "10px",
              "textAlign": "left",
            },
            "firstHeader": Object {
              "color": "#333333",
              "fontFamily": "'Museo Sans 700'",
              "fontSize": "18px",
              "lineHeight": "30px",
              "marginBottom": "10px",
              "marginTop": "10px",
              "textAlign": "left",
            },
            "secondHeader": Object {
              "color": "#333333",
              "fontFamily": "'Museo Sans 500'",
              "fontSize": "14px",
              "lineHeight": "20px",
              "marginBottom": "10px",
              "marginTop": "10px",
              "textAlign": "left",
            },
          },
        },
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": "Button",
        "size": "large",
        "variant": "large",
      },
      "ref": null,
      "rendered": "Button",
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <ButtonWithImage
          size="large"
          variant="large"
        >
          Button
        </ButtonWithImage>,
        "theme": Object {
          "borderColor": Object {
            "color0": "#FFFFFF",
            "color1": "#E5E5E5",
            "color10": "#AEAEAE",
            "color11": "#333333",
            "color12": "#DF4624",
            "color13": "#f2f2f2",
            "color2": "#DEDEDE",
            "color3": "#4F4F4F",
            "color4": "#848484",
            "color5": "#007FAF",
            "color6": "#006699",
            "color7": "#00649C",
            "color8": "#007CC4",
            "color9": "#F97E63",
          },
          "borderRadius": Array [
            0,
            2,
            4,
            8,
            12,
            16,
            18,
            20,
            24,
            28,
            32,
            36,
            40,
            44,
            48,
            52,
            56,
            60,
            64,
            68,
            72,
            76,
            80,
          ],
          "boxShadow": Array [
            "2px 4px 8px 0px rgba(138,138,138,0.5)",
            "2px 4px 8px 0px rgba(138,138,138,0.5)",
            "2px 2px 4px 0px rgba(0,127,175,1)",
          ],
          "breakpoints": Array [
            "1024px",
            "1200px",
            "1440px",
          ],
          "colors": Object {
            "color0": "#FFFFFF",
            "color1": "#E5E5E5",
            "color10": "#AEAEAE",
            "color11": "#333333",
            "color12": "#DF4624",
            "color13": "#f2f2f2",
            "color2": "#DEDEDE",
            "color3": "#4F4F4F",
            "color4": "#848484",
            "color5": "#007FAF",
            "color6": "#006699",
            "color7": "#00649C",
            "color8": "#007CC4",
            "color9": "#F97E63",
          },
          "fontFamily": Object {
            "primary300": "Museo Sans 300",
            "primary500": "Museo Sans 500",
            "primary700": "Museo Sans 700",
            "secondary": "Circe Regular",
            "secondaryBold": "Circe Bold",
          },
          "fontSizes": Array [
            0,
            2,
            4,
            8,
            12,
            16,
            18,
            20,
            24,
            28,
            32,
            36,
            40,
            44,
            48,
            52,
            56,
            60,
            64,
            68,
            72,
            76,
            80,
          ],
          "fontWeight": Array [
            300,
            500,
            700,
          ],
          "lineHeight": Array [
            0,
            2,
            4,
            8,
            12,
            16,
            18,
            20,
            24,
            28,
            32,
            36,
            40,
            44,
            48,
            52,
            56,
            60,
            64,
            68,
            72,
            76,
            80,
          ],
          "space": Array [
            0,
            2,
            4,
            8,
            12,
            16,
            18,
            20,
            24,
            28,
            32,
            36,
            40,
            44,
            48,
            52,
            56,
            60,
            64,
            68,
            72,
            76,
            80,
          ],
          "textAlign": Array [
            "left",
            "center",
            "right",
          ],
          "variant": Object {
            "buttonComment": Object {
              "comment": Object {
                "backgroundColor": "#006699",
                "border": 0,
                "minWidth": "20px",
              },
              "emptyComment": Object {
                "backgroundColor": "#848484",
                "border": 0,
                "minWidth": "20px",
              },
              "newComment": Object {
                "backgroundColor": "#df4624",
                "border": 0,
                "minWidth": "20px",
              },
            },
            "buttonSize": Object {
              "large": Object {
                "fontFamily": "Circe Bold",
                "fontSize": " 32px",
                "lineHeight": "40px",
                "minWidth": "500px",
                "padding": "8px 60px",
              },
              "medium": Object {
                "fontFamily": "Circe Bold",
                "fontSize": "18px",
                "lineHeight": "24px",
                "minWidth": "250px",
                "padding": "8px 0",
              },
              "small": Object {
                "fontFamily": "Circe Regular",
                "fontSize": " 16px",
                "lineHeight": "16px",
                "padding": "2px 0",
              },
              "xsmall": Object {
                "fontSize": " 14px",
                "fontWeight": 700,
                "lineHeight": "16px",
                "minWidth": "70px",
                "padding": "2px 0",
              },
            },
            "buttons": Object {
              "empty": Object {
                "backgroundColor": "#ffffff",
                "border": 0,
              },
              "large": Object {
                "&:hover": Object {
                  "backgroundColor": "#00649C",
                  "color": "#ffffff",
                  "fill": "#ffffff",
                },
                "backgroundColor": "transparent",
                "border": "2px solid",
                "color": "#00649C",
                "fill": "#00649C",
              },
              "small": Object {
                "&:hover": Object {
                  "backgroundColor": "#848484",
                  "color": "#ffffff",
                  "fill": "#ffffff",
                },
                "backgroundColor": "#fff",
                "border": "1px solid",
                "color": "#848484",
                "fill": "#848484",
              },
              "xsmall": Object {
                "&:hover": Object {
                  "backgroundColor": "#fff",
                  "color": "#00649C",
                  "fill": "#00649C",
                },
                "backgroundColor": "#00649C",
                "border": "1px solid #00649C",
                "color": "#fff",
                "fill": "#fff",
              },
            },
            "inputSize": Object {
              "lg": Object {
                "fontSize": "28px",
                "lineHeight": "36px",
                "padding": "10px 10px",
              },
              "md": Object {
                "fontSize": "16px",
                "lineHeight": "20px",
                "padding": "10px 10px",
              },
              "sm": Object {
                "fontSize": "16px",
                "lineHeight": "20px",
                "padding": "4px 10px",
              },
              "xs": Object {
                "fontSize": "16px",
                "lineHeight": "18px",
                "padding": "0 10px",
              },
            },
            "text": Object {
              "document": Object {
                "color": "#4F4F4F",
                "fontFamily": "'Museo Sans 300'",
                "fontSize": "14px",
                "lineHeight": "20px",
                "marginBottom": "10px",
                "marginTop": "10px",
                "textAlign": "left",
              },
              "firstHeader": Object {
                "color": "#333333",
                "fontFamily": "'Museo Sans 700'",
                "fontSize": "18px",
                "lineHeight": "30px",
                "marginBottom": "10px",
                "marginTop": "10px",
                "textAlign": "left",
              },
              "secondHeader": Object {
                "color": "#333333",
                "fontFamily": "'Museo Sans 500'",
                "fontSize": "14px",
                "lineHeight": "20px",
                "marginBottom": "10px",
                "marginTop": "10px",
                "textAlign": "left",
              },
            },
          },
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Button",
          "size": "large",
          "variant": "large",
        },
        "ref": null,
        "rendered": "Button",
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`ButtonWithImage: Рендерится с иконкой слева 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <StyledThemeProvider>
    <ButtonWithImage
      leftIcon={<UNDEFINED />}
      size="large"
      variant="large"
    >
      Button
    </ButtonWithImage>
  </StyledThemeProvider>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <ButtonWithImage
        leftIcon={<UNDEFINED />}
        size="large"
        variant="large"
      >
        Button
      </ButtonWithImage>,
      "theme": Object {
        "borderColor": Object {
          "color0": "#FFFFFF",
          "color1": "#E5E5E5",
          "color10": "#AEAEAE",
          "color11": "#333333",
          "color12": "#DF4624",
          "color13": "#f2f2f2",
          "color2": "#DEDEDE",
          "color3": "#4F4F4F",
          "color4": "#848484",
          "color5": "#007FAF",
          "color6": "#006699",
          "color7": "#00649C",
          "color8": "#007CC4",
          "color9": "#F97E63",
        },
        "borderRadius": Array [
          0,
          2,
          4,
          8,
          12,
          16,
          18,
          20,
          24,
          28,
          32,
          36,
          40,
          44,
          48,
          52,
          56,
          60,
          64,
          68,
          72,
          76,
          80,
        ],
        "boxShadow": Array [
          "2px 4px 8px 0px rgba(138,138,138,0.5)",
          "2px 4px 8px 0px rgba(138,138,138,0.5)",
          "2px 2px 4px 0px rgba(0,127,175,1)",
        ],
        "breakpoints": Array [
          "1024px",
          "1200px",
          "1440px",
        ],
        "colors": Object {
          "color0": "#FFFFFF",
          "color1": "#E5E5E5",
          "color10": "#AEAEAE",
          "color11": "#333333",
          "color12": "#DF4624",
          "color13": "#f2f2f2",
          "color2": "#DEDEDE",
          "color3": "#4F4F4F",
          "color4": "#848484",
          "color5": "#007FAF",
          "color6": "#006699",
          "color7": "#00649C",
          "color8": "#007CC4",
          "color9": "#F97E63",
        },
        "fontFamily": Object {
          "primary300": "Museo Sans 300",
          "primary500": "Museo Sans 500",
          "primary700": "Museo Sans 700",
          "secondary": "Circe Regular",
          "secondaryBold": "Circe Bold",
        },
        "fontSizes": Array [
          0,
          2,
          4,
          8,
          12,
          16,
          18,
          20,
          24,
          28,
          32,
          36,
          40,
          44,
          48,
          52,
          56,
          60,
          64,
          68,
          72,
          76,
          80,
        ],
        "fontWeight": Array [
          300,
          500,
          700,
        ],
        "lineHeight": Array [
          0,
          2,
          4,
          8,
          12,
          16,
          18,
          20,
          24,
          28,
          32,
          36,
          40,
          44,
          48,
          52,
          56,
          60,
          64,
          68,
          72,
          76,
          80,
        ],
        "space": Array [
          0,
          2,
          4,
          8,
          12,
          16,
          18,
          20,
          24,
          28,
          32,
          36,
          40,
          44,
          48,
          52,
          56,
          60,
          64,
          68,
          72,
          76,
          80,
        ],
        "textAlign": Array [
          "left",
          "center",
          "right",
        ],
        "variant": Object {
          "buttonComment": Object {
            "comment": Object {
              "backgroundColor": "#006699",
              "border": 0,
              "minWidth": "20px",
            },
            "emptyComment": Object {
              "backgroundColor": "#848484",
              "border": 0,
              "minWidth": "20px",
            },
            "newComment": Object {
              "backgroundColor": "#df4624",
              "border": 0,
              "minWidth": "20px",
            },
          },
          "buttonSize": Object {
            "large": Object {
              "fontFamily": "Circe Bold",
              "fontSize": " 32px",
              "lineHeight": "40px",
              "minWidth": "500px",
              "padding": "8px 60px",
            },
            "medium": Object {
              "fontFamily": "Circe Bold",
              "fontSize": "18px",
              "lineHeight": "24px",
              "minWidth": "250px",
              "padding": "8px 0",
            },
            "small": Object {
              "fontFamily": "Circe Regular",
              "fontSize": " 16px",
              "lineHeight": "16px",
              "padding": "2px 0",
            },
            "xsmall": Object {
              "fontSize": " 14px",
              "fontWeight": 700,
              "lineHeight": "16px",
              "minWidth": "70px",
              "padding": "2px 0",
            },
          },
          "buttons": Object {
            "empty": Object {
              "backgroundColor": "#ffffff",
              "border": 0,
            },
            "large": Object {
              "&:hover": Object {
                "backgroundColor": "#00649C",
                "color": "#ffffff",
                "fill": "#ffffff",
              },
              "backgroundColor": "transparent",
              "border": "2px solid",
              "color": "#00649C",
              "fill": "#00649C",
            },
            "small": Object {
              "&:hover": Object {
                "backgroundColor": "#848484",
                "color": "#ffffff",
                "fill": "#ffffff",
              },
              "backgroundColor": "#fff",
              "border": "1px solid",
              "color": "#848484",
              "fill": "#848484",
            },
            "xsmall": Object {
              "&:hover": Object {
                "backgroundColor": "#fff",
                "color": "#00649C",
                "fill": "#00649C",
              },
              "backgroundColor": "#00649C",
              "border": "1px solid #00649C",
              "color": "#fff",
              "fill": "#fff",
            },
          },
          "inputSize": Object {
            "lg": Object {
              "fontSize": "28px",
              "lineHeight": "36px",
              "padding": "10px 10px",
            },
            "md": Object {
              "fontSize": "16px",
              "lineHeight": "20px",
              "padding": "10px 10px",
            },
            "sm": Object {
              "fontSize": "16px",
              "lineHeight": "20px",
              "padding": "4px 10px",
            },
            "xs": Object {
              "fontSize": "16px",
              "lineHeight": "18px",
              "padding": "0 10px",
            },
          },
          "text": Object {
            "document": Object {
              "color": "#4F4F4F",
              "fontFamily": "'Museo Sans 300'",
              "fontSize": "14px",
              "lineHeight": "20px",
              "marginBottom": "10px",
              "marginTop": "10px",
              "textAlign": "left",
            },
            "firstHeader": Object {
              "color": "#333333",
              "fontFamily": "'Museo Sans 700'",
              "fontSize": "18px",
              "lineHeight": "30px",
              "marginBottom": "10px",
              "marginTop": "10px",
              "textAlign": "left",
            },
            "secondHeader": Object {
              "color": "#333333",
              "fontFamily": "'Museo Sans 500'",
              "fontSize": "14px",
              "lineHeight": "20px",
              "marginBottom": "10px",
              "marginTop": "10px",
              "textAlign": "left",
            },
          },
        },
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": "Button",
        "leftIcon": <UNDEFINED />,
        "size": "large",
        "variant": "large",
      },
      "ref": null,
      "rendered": "Button",
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <ButtonWithImage
          leftIcon={<UNDEFINED />}
          size="large"
          variant="large"
        >
          Button
        </ButtonWithImage>,
        "theme": Object {
          "borderColor": Object {
            "color0": "#FFFFFF",
            "color1": "#E5E5E5",
            "color10": "#AEAEAE",
            "color11": "#333333",
            "color12": "#DF4624",
            "color13": "#f2f2f2",
            "color2": "#DEDEDE",
            "color3": "#4F4F4F",
            "color4": "#848484",
            "color5": "#007FAF",
            "color6": "#006699",
            "color7": "#00649C",
            "color8": "#007CC4",
            "color9": "#F97E63",
          },
          "borderRadius": Array [
            0,
            2,
            4,
            8,
            12,
            16,
            18,
            20,
            24,
            28,
            32,
            36,
            40,
            44,
            48,
            52,
            56,
            60,
            64,
            68,
            72,
            76,
            80,
          ],
          "boxShadow": Array [
            "2px 4px 8px 0px rgba(138,138,138,0.5)",
            "2px 4px 8px 0px rgba(138,138,138,0.5)",
            "2px 2px 4px 0px rgba(0,127,175,1)",
          ],
          "breakpoints": Array [
            "1024px",
            "1200px",
            "1440px",
          ],
          "colors": Object {
            "color0": "#FFFFFF",
            "color1": "#E5E5E5",
            "color10": "#AEAEAE",
            "color11": "#333333",
            "color12": "#DF4624",
            "color13": "#f2f2f2",
            "color2": "#DEDEDE",
            "color3": "#4F4F4F",
            "color4": "#848484",
            "color5": "#007FAF",
            "color6": "#006699",
            "color7": "#00649C",
            "color8": "#007CC4",
            "color9": "#F97E63",
          },
          "fontFamily": Object {
            "primary300": "Museo Sans 300",
            "primary500": "Museo Sans 500",
            "primary700": "Museo Sans 700",
            "secondary": "Circe Regular",
            "secondaryBold": "Circe Bold",
          },
          "fontSizes": Array [
            0,
            2,
            4,
            8,
            12,
            16,
            18,
            20,
            24,
            28,
            32,
            36,
            40,
            44,
            48,
            52,
            56,
            60,
            64,
            68,
            72,
            76,
            80,
          ],
          "fontWeight": Array [
            300,
            500,
            700,
          ],
          "lineHeight": Array [
            0,
            2,
            4,
            8,
            12,
            16,
            18,
            20,
            24,
            28,
            32,
            36,
            40,
            44,
            48,
            52,
            56,
            60,
            64,
            68,
            72,
            76,
            80,
          ],
          "space": Array [
            0,
            2,
            4,
            8,
            12,
            16,
            18,
            20,
            24,
            28,
            32,
            36,
            40,
            44,
            48,
            52,
            56,
            60,
            64,
            68,
            72,
            76,
            80,
          ],
          "textAlign": Array [
            "left",
            "center",
            "right",
          ],
          "variant": Object {
            "buttonComment": Object {
              "comment": Object {
                "backgroundColor": "#006699",
                "border": 0,
                "minWidth": "20px",
              },
              "emptyComment": Object {
                "backgroundColor": "#848484",
                "border": 0,
                "minWidth": "20px",
              },
              "newComment": Object {
                "backgroundColor": "#df4624",
                "border": 0,
                "minWidth": "20px",
              },
            },
            "buttonSize": Object {
              "large": Object {
                "fontFamily": "Circe Bold",
                "fontSize": " 32px",
                "lineHeight": "40px",
                "minWidth": "500px",
                "padding": "8px 60px",
              },
              "medium": Object {
                "fontFamily": "Circe Bold",
                "fontSize": "18px",
                "lineHeight": "24px",
                "minWidth": "250px",
                "padding": "8px 0",
              },
              "small": Object {
                "fontFamily": "Circe Regular",
                "fontSize": " 16px",
                "lineHeight": "16px",
                "padding": "2px 0",
              },
              "xsmall": Object {
                "fontSize": " 14px",
                "fontWeight": 700,
                "lineHeight": "16px",
                "minWidth": "70px",
                "padding": "2px 0",
              },
            },
            "buttons": Object {
              "empty": Object {
                "backgroundColor": "#ffffff",
                "border": 0,
              },
              "large": Object {
                "&:hover": Object {
                  "backgroundColor": "#00649C",
                  "color": "#ffffff",
                  "fill": "#ffffff",
                },
                "backgroundColor": "transparent",
                "border": "2px solid",
                "color": "#00649C",
                "fill": "#00649C",
              },
              "small": Object {
                "&:hover": Object {
                  "backgroundColor": "#848484",
                  "color": "#ffffff",
                  "fill": "#ffffff",
                },
                "backgroundColor": "#fff",
                "border": "1px solid",
                "color": "#848484",
                "fill": "#848484",
              },
              "xsmall": Object {
                "&:hover": Object {
                  "backgroundColor": "#fff",
                  "color": "#00649C",
                  "fill": "#00649C",
                },
                "backgroundColor": "#00649C",
                "border": "1px solid #00649C",
                "color": "#fff",
                "fill": "#fff",
              },
            },
            "inputSize": Object {
              "lg": Object {
                "fontSize": "28px",
                "lineHeight": "36px",
                "padding": "10px 10px",
              },
              "md": Object {
                "fontSize": "16px",
                "lineHeight": "20px",
                "padding": "10px 10px",
              },
              "sm": Object {
                "fontSize": "16px",
                "lineHeight": "20px",
                "padding": "4px 10px",
              },
              "xs": Object {
                "fontSize": "16px",
                "lineHeight": "18px",
                "padding": "0 10px",
              },
            },
            "text": Object {
              "document": Object {
                "color": "#4F4F4F",
                "fontFamily": "'Museo Sans 300'",
                "fontSize": "14px",
                "lineHeight": "20px",
                "marginBottom": "10px",
                "marginTop": "10px",
                "textAlign": "left",
              },
              "firstHeader": Object {
                "color": "#333333",
                "fontFamily": "'Museo Sans 700'",
                "fontSize": "18px",
                "lineHeight": "30px",
                "marginBottom": "10px",
                "marginTop": "10px",
                "textAlign": "left",
              },
              "secondHeader": Object {
                "color": "#333333",
                "fontFamily": "'Museo Sans 500'",
                "fontSize": "14px",
                "lineHeight": "20px",
                "marginBottom": "10px",
                "marginTop": "10px",
                "textAlign": "left",
              },
            },
          },
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Button",
          "leftIcon": <UNDEFINED />,
          "size": "large",
          "variant": "large",
        },
        "ref": null,
        "rendered": "Button",
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`ButtonWithImage: Рендерится с иконкой справа 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <StyledThemeProvider>
    <ButtonWithImage
      rightIcon={<UNDEFINED />}
      size="large"
      variant="large"
    >
      Button
    </ButtonWithImage>
  </StyledThemeProvider>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <ButtonWithImage
        rightIcon={<UNDEFINED />}
        size="large"
        variant="large"
      >
        Button
      </ButtonWithImage>,
      "theme": Object {
        "borderColor": Object {
          "color0": "#FFFFFF",
          "color1": "#E5E5E5",
          "color10": "#AEAEAE",
          "color11": "#333333",
          "color12": "#DF4624",
          "color13": "#f2f2f2",
          "color2": "#DEDEDE",
          "color3": "#4F4F4F",
          "color4": "#848484",
          "color5": "#007FAF",
          "color6": "#006699",
          "color7": "#00649C",
          "color8": "#007CC4",
          "color9": "#F97E63",
        },
        "borderRadius": Array [
          0,
          2,
          4,
          8,
          12,
          16,
          18,
          20,
          24,
          28,
          32,
          36,
          40,
          44,
          48,
          52,
          56,
          60,
          64,
          68,
          72,
          76,
          80,
        ],
        "boxShadow": Array [
          "2px 4px 8px 0px rgba(138,138,138,0.5)",
          "2px 4px 8px 0px rgba(138,138,138,0.5)",
          "2px 2px 4px 0px rgba(0,127,175,1)",
        ],
        "breakpoints": Array [
          "1024px",
          "1200px",
          "1440px",
        ],
        "colors": Object {
          "color0": "#FFFFFF",
          "color1": "#E5E5E5",
          "color10": "#AEAEAE",
          "color11": "#333333",
          "color12": "#DF4624",
          "color13": "#f2f2f2",
          "color2": "#DEDEDE",
          "color3": "#4F4F4F",
          "color4": "#848484",
          "color5": "#007FAF",
          "color6": "#006699",
          "color7": "#00649C",
          "color8": "#007CC4",
          "color9": "#F97E63",
        },
        "fontFamily": Object {
          "primary300": "Museo Sans 300",
          "primary500": "Museo Sans 500",
          "primary700": "Museo Sans 700",
          "secondary": "Circe Regular",
          "secondaryBold": "Circe Bold",
        },
        "fontSizes": Array [
          0,
          2,
          4,
          8,
          12,
          16,
          18,
          20,
          24,
          28,
          32,
          36,
          40,
          44,
          48,
          52,
          56,
          60,
          64,
          68,
          72,
          76,
          80,
        ],
        "fontWeight": Array [
          300,
          500,
          700,
        ],
        "lineHeight": Array [
          0,
          2,
          4,
          8,
          12,
          16,
          18,
          20,
          24,
          28,
          32,
          36,
          40,
          44,
          48,
          52,
          56,
          60,
          64,
          68,
          72,
          76,
          80,
        ],
        "space": Array [
          0,
          2,
          4,
          8,
          12,
          16,
          18,
          20,
          24,
          28,
          32,
          36,
          40,
          44,
          48,
          52,
          56,
          60,
          64,
          68,
          72,
          76,
          80,
        ],
        "textAlign": Array [
          "left",
          "center",
          "right",
        ],
        "variant": Object {
          "buttonComment": Object {
            "comment": Object {
              "backgroundColor": "#006699",
              "border": 0,
              "minWidth": "20px",
            },
            "emptyComment": Object {
              "backgroundColor": "#848484",
              "border": 0,
              "minWidth": "20px",
            },
            "newComment": Object {
              "backgroundColor": "#df4624",
              "border": 0,
              "minWidth": "20px",
            },
          },
          "buttonSize": Object {
            "large": Object {
              "fontFamily": "Circe Bold",
              "fontSize": " 32px",
              "lineHeight": "40px",
              "minWidth": "500px",
              "padding": "8px 60px",
            },
            "medium": Object {
              "fontFamily": "Circe Bold",
              "fontSize": "18px",
              "lineHeight": "24px",
              "minWidth": "250px",
              "padding": "8px 0",
            },
            "small": Object {
              "fontFamily": "Circe Regular",
              "fontSize": " 16px",
              "lineHeight": "16px",
              "padding": "2px 0",
            },
            "xsmall": Object {
              "fontSize": " 14px",
              "fontWeight": 700,
              "lineHeight": "16px",
              "minWidth": "70px",
              "padding": "2px 0",
            },
          },
          "buttons": Object {
            "empty": Object {
              "backgroundColor": "#ffffff",
              "border": 0,
            },
            "large": Object {
              "&:hover": Object {
                "backgroundColor": "#00649C",
                "color": "#ffffff",
                "fill": "#ffffff",
              },
              "backgroundColor": "transparent",
              "border": "2px solid",
              "color": "#00649C",
              "fill": "#00649C",
            },
            "small": Object {
              "&:hover": Object {
                "backgroundColor": "#848484",
                "color": "#ffffff",
                "fill": "#ffffff",
              },
              "backgroundColor": "#fff",
              "border": "1px solid",
              "color": "#848484",
              "fill": "#848484",
            },
            "xsmall": Object {
              "&:hover": Object {
                "backgroundColor": "#fff",
                "color": "#00649C",
                "fill": "#00649C",
              },
              "backgroundColor": "#00649C",
              "border": "1px solid #00649C",
              "color": "#fff",
              "fill": "#fff",
            },
          },
          "inputSize": Object {
            "lg": Object {
              "fontSize": "28px",
              "lineHeight": "36px",
              "padding": "10px 10px",
            },
            "md": Object {
              "fontSize": "16px",
              "lineHeight": "20px",
              "padding": "10px 10px",
            },
            "sm": Object {
              "fontSize": "16px",
              "lineHeight": "20px",
              "padding": "4px 10px",
            },
            "xs": Object {
              "fontSize": "16px",
              "lineHeight": "18px",
              "padding": "0 10px",
            },
          },
          "text": Object {
            "document": Object {
              "color": "#4F4F4F",
              "fontFamily": "'Museo Sans 300'",
              "fontSize": "14px",
              "lineHeight": "20px",
              "marginBottom": "10px",
              "marginTop": "10px",
              "textAlign": "left",
            },
            "firstHeader": Object {
              "color": "#333333",
              "fontFamily": "'Museo Sans 700'",
              "fontSize": "18px",
              "lineHeight": "30px",
              "marginBottom": "10px",
              "marginTop": "10px",
              "textAlign": "left",
            },
            "secondHeader": Object {
              "color": "#333333",
              "fontFamily": "'Museo Sans 500'",
              "fontSize": "14px",
              "lineHeight": "20px",
              "marginBottom": "10px",
              "marginTop": "10px",
              "textAlign": "left",
            },
          },
        },
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": "Button",
        "rightIcon": <UNDEFINED />,
        "size": "large",
        "variant": "large",
      },
      "ref": null,
      "rendered": "Button",
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <ButtonWithImage
          rightIcon={<UNDEFINED />}
          size="large"
          variant="large"
        >
          Button
        </ButtonWithImage>,
        "theme": Object {
          "borderColor": Object {
            "color0": "#FFFFFF",
            "color1": "#E5E5E5",
            "color10": "#AEAEAE",
            "color11": "#333333",
            "color12": "#DF4624",
            "color13": "#f2f2f2",
            "color2": "#DEDEDE",
            "color3": "#4F4F4F",
            "color4": "#848484",
            "color5": "#007FAF",
            "color6": "#006699",
            "color7": "#00649C",
            "color8": "#007CC4",
            "color9": "#F97E63",
          },
          "borderRadius": Array [
            0,
            2,
            4,
            8,
            12,
            16,
            18,
            20,
            24,
            28,
            32,
            36,
            40,
            44,
            48,
            52,
            56,
            60,
            64,
            68,
            72,
            76,
            80,
          ],
          "boxShadow": Array [
            "2px 4px 8px 0px rgba(138,138,138,0.5)",
            "2px 4px 8px 0px rgba(138,138,138,0.5)",
            "2px 2px 4px 0px rgba(0,127,175,1)",
          ],
          "breakpoints": Array [
            "1024px",
            "1200px",
            "1440px",
          ],
          "colors": Object {
            "color0": "#FFFFFF",
            "color1": "#E5E5E5",
            "color10": "#AEAEAE",
            "color11": "#333333",
            "color12": "#DF4624",
            "color13": "#f2f2f2",
            "color2": "#DEDEDE",
            "color3": "#4F4F4F",
            "color4": "#848484",
            "color5": "#007FAF",
            "color6": "#006699",
            "color7": "#00649C",
            "color8": "#007CC4",
            "color9": "#F97E63",
          },
          "fontFamily": Object {
            "primary300": "Museo Sans 300",
            "primary500": "Museo Sans 500",
            "primary700": "Museo Sans 700",
            "secondary": "Circe Regular",
            "secondaryBold": "Circe Bold",
          },
          "fontSizes": Array [
            0,
            2,
            4,
            8,
            12,
            16,
            18,
            20,
            24,
            28,
            32,
            36,
            40,
            44,
            48,
            52,
            56,
            60,
            64,
            68,
            72,
            76,
            80,
          ],
          "fontWeight": Array [
            300,
            500,
            700,
          ],
          "lineHeight": Array [
            0,
            2,
            4,
            8,
            12,
            16,
            18,
            20,
            24,
            28,
            32,
            36,
            40,
            44,
            48,
            52,
            56,
            60,
            64,
            68,
            72,
            76,
            80,
          ],
          "space": Array [
            0,
            2,
            4,
            8,
            12,
            16,
            18,
            20,
            24,
            28,
            32,
            36,
            40,
            44,
            48,
            52,
            56,
            60,
            64,
            68,
            72,
            76,
            80,
          ],
          "textAlign": Array [
            "left",
            "center",
            "right",
          ],
          "variant": Object {
            "buttonComment": Object {
              "comment": Object {
                "backgroundColor": "#006699",
                "border": 0,
                "minWidth": "20px",
              },
              "emptyComment": Object {
                "backgroundColor": "#848484",
                "border": 0,
                "minWidth": "20px",
              },
              "newComment": Object {
                "backgroundColor": "#df4624",
                "border": 0,
                "minWidth": "20px",
              },
            },
            "buttonSize": Object {
              "large": Object {
                "fontFamily": "Circe Bold",
                "fontSize": " 32px",
                "lineHeight": "40px",
                "minWidth": "500px",
                "padding": "8px 60px",
              },
              "medium": Object {
                "fontFamily": "Circe Bold",
                "fontSize": "18px",
                "lineHeight": "24px",
                "minWidth": "250px",
                "padding": "8px 0",
              },
              "small": Object {
                "fontFamily": "Circe Regular",
                "fontSize": " 16px",
                "lineHeight": "16px",
                "padding": "2px 0",
              },
              "xsmall": Object {
                "fontSize": " 14px",
                "fontWeight": 700,
                "lineHeight": "16px",
                "minWidth": "70px",
                "padding": "2px 0",
              },
            },
            "buttons": Object {
              "empty": Object {
                "backgroundColor": "#ffffff",
                "border": 0,
              },
              "large": Object {
                "&:hover": Object {
                  "backgroundColor": "#00649C",
                  "color": "#ffffff",
                  "fill": "#ffffff",
                },
                "backgroundColor": "transparent",
                "border": "2px solid",
                "color": "#00649C",
                "fill": "#00649C",
              },
              "small": Object {
                "&:hover": Object {
                  "backgroundColor": "#848484",
                  "color": "#ffffff",
                  "fill": "#ffffff",
                },
                "backgroundColor": "#fff",
                "border": "1px solid",
                "color": "#848484",
                "fill": "#848484",
              },
              "xsmall": Object {
                "&:hover": Object {
                  "backgroundColor": "#fff",
                  "color": "#00649C",
                  "fill": "#00649C",
                },
                "backgroundColor": "#00649C",
                "border": "1px solid #00649C",
                "color": "#fff",
                "fill": "#fff",
              },
            },
            "inputSize": Object {
              "lg": Object {
                "fontSize": "28px",
                "lineHeight": "36px",
                "padding": "10px 10px",
              },
              "md": Object {
                "fontSize": "16px",
                "lineHeight": "20px",
                "padding": "10px 10px",
              },
              "sm": Object {
                "fontSize": "16px",
                "lineHeight": "20px",
                "padding": "4px 10px",
              },
              "xs": Object {
                "fontSize": "16px",
                "lineHeight": "18px",
                "padding": "0 10px",
              },
            },
            "text": Object {
              "document": Object {
                "color": "#4F4F4F",
                "fontFamily": "'Museo Sans 300'",
                "fontSize": "14px",
                "lineHeight": "20px",
                "marginBottom": "10px",
                "marginTop": "10px",
                "textAlign": "left",
              },
              "firstHeader": Object {
                "color": "#333333",
                "fontFamily": "'Museo Sans 700'",
                "fontSize": "18px",
                "lineHeight": "30px",
                "marginBottom": "10px",
                "marginTop": "10px",
                "textAlign": "left",
              },
              "secondHeader": Object {
                "color": "#333333",
                "fontFamily": "'Museo Sans 500'",
                "fontSize": "14px",
                "lineHeight": "20px",
                "marginBottom": "10px",
                "marginTop": "10px",
                "textAlign": "left",
              },
            },
          },
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Button",
          "rightIcon": <UNDEFINED />,
          "size": "large",
          "variant": "large",
        },
        "ref": null,
        "rendered": "Button",
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
